# FuzzyAI

./: pyproject.toml
