[tool.setuptools]
py-modules = ["fuzzyai"]

[tool.poetry]
name = "fuzzyai"
version = "1.0.0"
description = "FuzzyAI is a Python library for fuzzying LLMs."
authors = ["CyberArk <cyber@cyberark.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "*"
motor = "*"
pydantic = "*"
aiofiles = "*"
aiohttp = {version = "*", extras = ["speedups"]}
transformers = "*"
sentence-transformers = "*"
fschat = "*"
pygad = "*"
backoff = "*"
art = "*"
pandas = "*"
openai = "*"
tabulate = "*"
jsonpath-ng = "*"
torch = "*"
numpy = "*"
httpx = "*"
python-dotenv = "*"
tornado = "*"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
deptry = "*"
pytest-mock = "*"
types-aiofiles = "*"
motor-types = "*"
pytest-asyncio = "*"
requests-mock = "*"
mypy = "*"
pytest = "*"
autoflake = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  "src/"
]

[tool.poetry.scripts]
fuzzyai = "fuzzyai.cli:main"

[build-system]
requires = ["setuptools>=40.9.0", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
